--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,11 @@
             "PandaLeague\\ErrorCatalog\\": "src/"
         }
     },
-    "require": {},
+    "require": {
+        "php": "^7.2 | ^8.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.5 | ^9.5"
+    },
     "license": "MIT"
 }
